# gitlogue

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  generate_changelog.sh
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  specification.md  themes.md  usage.md
src/: animation.rs  git.rs  main.rs  ui.rs
src/panes/: editor.rs  file_tree.rs  terminal.rs
src/syntax/: mod.rs
src/syntax/languages/: bash.rs  mod.rs
src/widgets/: mod.rs  selectable_paragraph.rs
